--- a/estilos CSS/Suscripciones_Styles.css
+++ b/estilos CSS/Suscripciones_Styles.css
@@ -119,7 +119,7 @@ body{
     .planFree,
     .planVIP {
         padding: 60px;
-        width: 80%;
+        width: 70%;
     }
 
     .planFree h1,
@@ -149,7 +149,8 @@ body{
 
     .planFree,
     .planVIP {
-        padding: 40px;
+        margin: auto
+        padding: 30px;
         width: 80%;
     }
 
