--- a/estilos CSS/Register_Styles.css
+++ b/estilos CSS/Register_Styles.css
@@ -182,10 +182,10 @@ input::placeholder {
     width: 35px;
     border-radius: 10px;
     position: absolute;
-    top:220px;
-    left: 70px;
+    top:195px;
+    left: 40px;
     border: 0;
-    background-image: url(img/background/return-arrow.png) ;
+    background-image: url(img/iconos/atras.png) ;
     background-size: 190%;
     background-position: center;
     cursor:pointer;
@@ -203,5 +203,53 @@ input::placeholder {
 
     .logo-section{
         display: none;
+    }
+
+    .title-login{
+        font-family: 'Poppins';
+        font-weight: bold;
+        font-size: 30px;
+        color: #419F34;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
+    .subtitle-login{
+        font-family: 'Poppins';
+        font-weight: bold;
+        font-size: 17px;
+        color: #61462E;
+        margin-bottom: 5px;
+        margin-right: 100px;
+        margin-left: 100px;
+    }
+    
+    .other-text{
+        font-family: 'Poppins';
+        font-weight: bold;
+        font-size: 15px;
+        color: #419F34;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+    
+    
+    .btn{
+        padding: 10px;
+        font-size: 15px;
+        background-color: #419F34;
+        color: #fff;
+        border: none;
+        border-radius: 25px;
+        cursor: pointer;
+        margin-bottom: 10px;
+        font-family: 'Poppins';
+        font-weight: bold;
+        box-shadow: 0px 4px 4px rgb(134, 133, 133);
+        width: 140px; 
+        height: 20px; 
+        text-align: center;
+        display: block;
+        margin: 20px auto;
     }
 }
