--- a/estilos CSS/Register_Styles.css
+++ b/estilos CSS/Register_Styles.css
@@ -7,20 +7,18 @@
 
 .container {
     display: flex;
-    flex-wrap: wrap;
     width: 100%;
     background: #CBDEBA;
     border-radius: 8px;
     overflow: hidden;
-    max-width: 1800px; /* Cambiado de 900px a 1200px para mayor ancho */
-    margin: 20px; /* Añadido un margen para evitar que quede pegado a los bordes */
+    max-width: 1800px; 
+    margin: 20px; 
 }
 
 /* Sección del formulario */
 .form-section {
     box-sizing: border-box;
-    flex: 1 1 60%; /* Cambiado para que ocupe más espacio relativo (70% del contenedor) */
-     /* Incrementado el relleno interno para una apariencia más amplia */
+    flex: 1 1 60%;
     box-sizing: border-box;
 }
 
@@ -28,6 +26,7 @@
 .form-section form {
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 /* Estilo para las etiquetas y entradas */
@@ -71,19 +70,19 @@
 .social-buttons .social-btn {
     width: 40px;
     height: 40px;
-    background: none; /* Fondo transparente */
-    border: none; /* Sin borde */
+    background: none;
+    border: none; 
     padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    border-radius: 50%; /* Botón circular */
+    border-radius: 50%; 
 }
 
 .social-buttons .social-btn img {
-    width: 100%; /* El ícono ocupa todo el botón */
-    height: auto; /* Mantener proporción */
+    width: 100%; 
+    height: auto; 
 }
 
 
@@ -109,14 +108,14 @@
     justify-content: center;
     align-items: center;
     background: #CBDEBA;
-    max-width: 90%; /* Reduce el tamaño si se extiende demasiado */
-    height: auto; /* Mantiene proporción */
+    max-width: 90%; 
+    height: auto; 
 }
 
 .logo-section img {
     max-width: 100%;
     height: auto;
-    flex: 1 1 30%; /* Cambiado para ocupar el 30% del ancho del contenedor */
+    flex: 1 1 30%; 
 }
 
 /*Extras*/
@@ -177,22 +176,87 @@ input::placeholder {
     background-color: #28551D; 
 }
 
-.boton-regreso{
-    height: 35px;
-    width: 35px;
-    border-radius: 10px;
-    position: absolute;
-    top:195px;
-    left: 40px;
-    border: 0;
-    background-image: url(img/iconos/atras.png) ;
-    background-size: 190%;
-    background-position: center;
-    cursor:pointer;
+.login .ir--atras {
+    width: 30%;
+    height: auto;
+    cursor: pointer;
+
 }
 
 /* Estilos responsivos */
+
+@media (max-width: 1540px) {
+
+    .titulo{
+        margin-top: 50px;
+    }
+    
+}
+
+
 @media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .form-section {
+        flex: 1 1 100%;
+    }
+
+    .logo-section{
+        display: none;
+    }
+
+    .title-login{
+        font-family: 'Poppins';
+        font-weight: bold;
+        font-size: 30px;
+        color: #419F34;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
+    .subtitle-login{
+        font-family: 'Poppins';
+        font-weight: bold;
+        font-size: 17px;
+        color: #61462E;
+        margin-bottom: 5px;
+        margin-right: 100px;
+        margin-left: 100px;
+    }
+    
+    .other-text{
+        font-family: 'Poppins';
+        font-weight: bold;
+        font-size: 15px;
+        color: #419F34;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+    
+    
+    .btn{
+        padding: 10px;
+        font-size: 15px;
+        background-color: #419F34;
+        color: #fff;
+        border: none;
+        border-radius: 25px;
+        cursor: pointer;
+        margin-bottom: 10px;
+        font-family: 'Poppins';
+        font-weight: bold;
+        box-shadow: 0px 4px 4px rgb(134, 133, 133);
+        width: 140px; 
+        height: 20px; 
+        text-align: center;
+        display: block;
+        margin: 20px auto;
+    }
+}
+
+@media (max-width: 450px) {
     .container {
         flex-direction: column;
     }
