--- a/estilos CSS/RootBot_Styles.css
+++ b/estilos CSS/RootBot_Styles.css
@@ -212,39 +212,31 @@
  
     
     
-    @media (max-width:1100px){
-    
-        .main-container{
-    
-            margin-top: 200px;
-            
-        }
 
-        .menu-left{
-        
-            display: none;
-        }
-        
-        .menu-left{
-        
-            position: absolute;
-            z-index: 100;
-            width: 40%;
-            box-shadow:4px 0 10px rgba(0, 0, 0, 0.5); 
-        }
-        
-        .open-sidebar{display: contents;
-        outline: none;
-        border: none ;
-        }
-        
-        .close-sidebar{
-            display: none;
-            outline: none;
-        }
+@media (max-width:425px){
 
 
-    
-    
-    }
-
+        .menu-left p{
+        
+        margin-top: 250px;
+        }
+        
+        .upper-chatbot-div{
+        
+            margin-right: 25%;
+        }
+        
+        .chatbot-panel{
+        
+        box-sizing: border-box;
+        
+        }
+        
+        .lower-chatbot-div{
+        
+            margin-left: 2%;
+        }
+        
+}
+        
+        
