--- a/estilos CSS/ViewTasks_Styles.css
+++ b/estilos CSS/ViewTasks_Styles.css
@@ -1,4 +1,3 @@
-
 .body-container{
     background-color:rgb(203, 222, 186);
     
@@ -82,7 +81,7 @@
     .task-panel{
     
         background-color: white ;
-        border:  3px solid rgb(65,159, 52);
+        border:  3px solid #4CAF50;
         position: relative;
         width: 100%;
         flex-wrap: wrap;
@@ -107,6 +106,9 @@
         height: 40%;
     
     }
+
+.taskbox img{margin-left: 10%; margin-top: 10%; }
+.taskbox p {margin-left: 1.5%; width: 100%}
     .topbar{
         width: 100%;
         
@@ -119,6 +121,8 @@
         margin-top: 5%;
         margin-left: 30%;
         color:rgb(65,159, 52);
+        width: 70px;
+        height: 30px;
     }
     
     .task-content img {
@@ -201,21 +205,40 @@
     position: relative;
     
     }
-    .boton-regreso-responsive{
-    
-        position: relative !important;
-        margin-left: 1%;
+
+    .topbar h2 , .boton-regreso-responsive{
+
+ 
+    margin-top: 10%;
     }
     
+
     .topbar h2{
-    position: relative ;
-    margin-right: 40%;
+
+margin-right: 40%;
+
+    }
+    }    
+
+@media(max-width:519px){
+
+    .topbar h2 {
+        margin-left: 23%;
+        margin-top: 10%;
     
     }
+
+
     
-    }    
+}
+
+
+
+
+
+
     
-    @media(max-width:425px){
+    @media(max-width:445px){
         .topbar{
         
         
@@ -223,11 +246,23 @@
         
         }
         
-        .topbar h2{
-            margin-right: 5%;
-            margin-top: 10.5%;
+.taskbox{
+
+    width: 90%;
+}
+
+.taskbox img{
+
+margin-left: 10%;
+
+}
+
+        .topbar h2, .boton-regreso-responsive {
+            margin-right: 10%;
+            margin-top: 10%;
         
         }
-        
+
+
         
 }
