--- a/estilos CSS/RootBot_Styles.css
+++ b/estilos CSS/RootBot_Styles.css
@@ -213,30 +213,84 @@
     
     
 
-@media (max-width:425px){
+    @media (max-width:1100px){
+    
+        .main-container{
+    
+            margin-top: 200px;
+            
+        }
 
-
-        .menu-left p{
+        .menu-left{
         
-        margin-top: 250px;
+            display: none;
         }
         
-        .upper-chatbot-div{
+        .menu-left{
         
+            position: absolute;
+            z-index: 100;
+            width: 20%;
+            box-shadow:4px 0 10px rgba(0, 0, 0, 0.5); 
+        }
+        
+        .open-sidebar{display: contents;
+        outline: none;
+        border: none ;
+        }
+        
+        .close-sidebar{
+            display: none;
+            outline: none;
+        }
+        .menu-left p {
+
+            margin-top: 250px;
+        }
+    }
+
+@media (max-width:850px){
+
+    .menu-left {
+
+        width: 30%;
+    }
+}
+
+
+
+
+    @media (max-width:430px){
+
+        .menu-left{
+        
+            position: absolute;
+            z-index: 100;
+            width: 55%;
+            box-shadow:4px 0 10px rgba(0, 0, 0, 0.5); 
+        }
+        .menu-left p{
+
+            margin-top: 250px;
+        }
+
+        .upper-chatbot-div{
+
             margin-right: 25%;
         }
-        
+
         .chatbot-panel{
-        
-        box-sizing: border-box;
-        
+
+            box-sizing: border-box;
+
         }
-        
+
         .lower-chatbot-div{
-        
-            margin-left: 2%;
+
+                margin-left: 2%;
         }
-        
-}
+
+    }
+
         
         
