--- a/estilos CSS/MiPerfil_Styles.css
+++ b/estilos CSS/MiPerfil_Styles.css
@@ -1,46 +1,51 @@
+/*General*/
 body {
+  margin: 0;
   background-color: #cbdeba;
 }
 
-/*Container Perfil*/
+.cabecera {
+  z-index: 999;
+}
+
+/*Container*/
 .container-menu {
-  box-sizing: border-box;
-  display: flex;
-  width: 96%;
+  width: 90%;
+  max-width: 1900px;
   margin: 0 auto;
-  margin-right: 13px;
+  display: flex;
 }
 
 /*Sidebar*/
 .sidebar {
+  padding: 1rem;
   background-color: #419f34;
-  width: 310px;
-  padding: 10px;
-  color: black;
+  list-style: none;
+  height: auto;
+  color: white;
   font-family: "Nunito", sans-serif;
-  z-index: 1;
+  font-size: 30px;
+  width: 22rem;
 }
 
 .sidebar h2.Ajustes {
   font-size: 35px;
   text-align: center;
-  margin-right: 20px;
-  filter: invert(1);
 }
 
 .sidebar h2 a.Cerrar-Sesion {
   color: white;
   font-weight: bold;
   font-size: 35px;
-  text-align: center;
-  margin-right: 20px;
   text-decoration: none;
-  margin-left: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
 }
 
 .sidebar ul {
   list-style: none;
-  filter: invert(1);
 }
 
 .sidebar ul h2 {
@@ -54,7 +59,7 @@ body {
 
 .sidebar ul li a {
   text-decoration: none;
-  color: black;
+  color: white;
   font-size: 20px;
 }
 /*Iconos del sidebar*/
@@ -64,20 +69,17 @@ body {
 
 .sidebar li img {
   margin-right: 20px;
+  filter: invert(1);
 }
 
 /*Imagen perfil*/
 .Perfil-Usuario {
   flex: 1;
-  padding: 40px;
+  flex-grow: 1;
+  padding: 100px;
   background-color: white;
   border: 2px solid #419f34;
-  border-radius: 5px;
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  margin-right: 50px;
-  flex-grow: 1;
   justify-content: center;
 }
 
@@ -163,39 +165,127 @@ body {
 }
 
 @media (max-width: 1100px) {
-  .container-menu {
-    flex-direction: column;
-    margin-top: 100px;
-    margin-right: 5px;
+  .main {
+    margin-top: 50px;
+    padding-right: 25px;
   }
 
-  .sidebar {
-    display: flex;
-    width: 93%;
+  .container-menu {
+    flex-direction: column;
   }
-  .sidebar h2.Ajustes {
-    margin-top: 130px;
+  .sidebar {
+    width: 90%;
+    padding: 2.65rem;
+  }
+
+  .sidebar h2 a.Cerrar-Sesion {
+    margin-bottom: -110px;
+    margin-top: -85px;
   }
 
   .sidebar li img {
     display: none;
+  }
+
+  .sidebar ul {
+    list-style: circle;
+  }
+
+  /* Imagen de perfil */
+  .Perfil-Usuario {
+    margin: 0 auto;
+    width: 90%;
+    margin-bottom: 1rem;
+    padding: 40px;
+  }
+
+  .Perfil-Usuario img {
+    width: 100px;
+    height: 100px;
+  }
+
+  /* Información del perfil */
+  .informacion-perfil {
+    gap: 10px;
+    width: 100%;
+  }
+
+  .informacion-perfil input[type="text"],
+  .informacion-perfil input[type="email"],
+  .informacion-perfil input[type="password"] {
+    padding: 10px;
+    font-size: 14px;
+  }
+
+  /* Botones */
+  .botones {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .change-btn,
+  .action-btn {
+    font-size: 12px;
+    padding: 8px 10px;
   }
 }
 
-@media (max-height: 830px) {
+@media (max-width: 660px) {
+  .main {
+    margin-top: 50px;
+    margin-right: 50px;
+    padding-right: 4px;
+  }
+
   .container-menu {
     flex-direction: column;
-    margin-top: 100px;
-    margin-right: 5px;
   }
   .sidebar {
-    display: flex;
-    width: 93%;
+    width: 90%;
+    padding: 2.65rem;
+    font-size: 16px;
   }
+
   .sidebar h2.Ajustes {
-    margin-top: 130px;
+    font-size: 32px;
   }
-  .sidebar li img {
-    display: none;
+
+  .sidebar h2 a.Cerrar-Sesion {
+    font-size: 32px;
+  }
+
+  .Perfil-Usuario a {
+    font-size: 10px;
+  }
+  /*perfil info*/
+  .informacion-perfil {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 100%;
+    max-width: 1000px;
+  }
+
+  .informacion-perfil label {
+    font-size: 14px;
+    color: #419f34;
+    font-family: "Nunito", sans-serif;
+  }
+
+  .informacion-perfil input[type="text"],
+  .informacion-perfil input[type="email"],
+  .informacion-perfil input[type="password"] {
+    width: 100%;
+    padding: 12px;
+    font-size: 14px;
+  }
+  /*Botones del perfil*/
+
+  .change-btn {
+    font-size: 12px;
+  }
+
+  .action-btn {
+    font-size: 12px;
   }
 }
